--- a/bin/.classpath
+++ b/bin/.classpath
@@ -67,5 +67,6 @@
 	<classpathentry kind="lib" path="C:/Users/VARSHINI/Downloads/selenium-java-4.14.1/selenium-safari-driver-4.14.1-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VARSHINI/Downloads/selenium-java-4.14.1/selenium-support-4.14.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/VARSHINI/Downloads/selenium-java-4.14.1/selenium-support-4.14.1-sources.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
